# doc_driven_builder

./: .gitignore  Makefile  README.md  STRUCTURE.md  instructions.txt  pyproject.toml  structure.py
diagnostics/: lr_range_results.txt
sample_docs/: api_documentation.json  pytorch_tutorial.md  training_procedures.txt  transformer_architecture.md
scripts/: dataset.py  debug_training.py  evaluation.py  improved_training.py  lr_range_test.py  main.py  model.py  model_deployment.py  model_evaluation.py  model_inference.py  training.py  training_diagnostics.py  usage.py  utils.py
